refactor: Remover configurações desnecessárias do Next.js e Vercel
- Removida a opção 'output' do arquivo `next.config.js` para simplificar a configuração.
- Atualizado o arquivo `vercel.json` para conter apenas a configuração básica do framework Next.js, eliminando comandos de build e dev desnecessários.

--- a/src/frontend/vercel.json
+++ b/src/frontend/vercel.json
@@ -1,7 +1,4 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install"
+  "framework": "nextjs"
 }
 
